<resources>
    <string name="app_name">Your Words</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">New Word</string>
    <string name="menu_gallery">Camera</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email">progressioac@gmail.com</string>
    <string name="company">Progressio</string>
    <string name="title_1">Vocabulary</string>
    <string name="infinitivo" />
    <string name="simple_past" />
    <string name="traduction" />
    <string name="button_next">next</string>
    <string name="button_after">after</string>
    <string name="title_activity_new_word">New Word</string>
    <string name="title_activity_pratice_word">Practice Word</string>
    <string name="title_infinitivo">Infinitivo</string>
    <string name="title_simple_past">Simple Past</string>
    <string name="title_traduction">Traduction</string>
    <string name="participle_past">Participle Past</string>
    <string name="title_clear">Clear</string>
    <string name="title_save">Save</string>
    <string name="suffle">Suffle</string>
    <string name="title_check">Check</string>

</resources>
