<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFE3EB"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/title_1"
        android:layout_width="119dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title_1"
        android:textAlignment="center"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignStart="@+id/divider3"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:background="#DC9E1B1B" />

    <TextView
        android:id="@+id/title_"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="68dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title_infinitivo"
        android:textAlignment="textStart"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/infinitivo"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="102dp"
        android:layout_marginRight="166dp"
        android:autoSizeTextType="uniform"
        android:text="@string/infinitivo"
        android:textAlignment="center"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="515dp"
        android:background="#DC9E1B1B" />

    <TextView
        android:id="@+id/title_6"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="170dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title_simple_past"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/simple_past"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="208dp"
        android:layout_marginRight="166dp"
        android:autoSizeTextType="uniform"
        android:text="@string/simple_past"
        android:textAlignment="center"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="272dp"
        android:background="#DC9E1B1B" />

    <TextView
        android:id="@+id/title_7"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="279dp"
        android:autoSizeTextType="uniform"
        android:text="@string/participle_past"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/participle_past"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="320dp"
        android:layout_marginRight="163dp"
        android:autoSizeTextType="uniform"
        android:text="@string/simple_past"
        android:textAlignment="center"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="383dp"
        android:background="#DC9E1B1B" />

    <TextView
        android:id="@+id/title_9"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="390dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title_traduction"
        android:textAlignment="center"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/traduction"
        android:layout_width="254dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="439dp"
        android:autoSizeTextType="uniform"
        android:text="@string/traduction"
        android:textAlignment="center"
        android:textSize="12sp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="163dp"
        android:background="#DC9E1B1B" />

    <Button
        android:id="@+id/button_after2"
        android:layout_width="114dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="47dp"
        android:background="#EBEDF0"
        android:onClick="showNewVerb"
        android:text="@string/suffle" />


</RelativeLayout>